--- a/taskb.html
+++ b/taskb.html
@@ -25,7 +25,7 @@
 			<td>Freshman Year to Present</td>
 		</tr>
 		<tr>
-			<td rowspan="2">I am at Claflin now.</td>
+			<td colspan="2">I am at Claflin now.</td>
 		</tr>
 	</table>
 
@@ -41,7 +41,7 @@
 		</pre>
 	</p>
 	<iframe src="http://www.claflin.edu"></iframe><br>
-	<a href="www.claflin.edu">Visit the Claflin University  Homepage</a>
+	<a href="http://www.claflin.edu">Visit the Claflin University  Homepage</a>
 	<a href="index.html"> Back to Home</a>
 </body>
 </html>
